--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       }
       .video, .thermometer, .order, .social {
         border: 1px dotted;
+        text-align: center;
       }
       .video {
         /* Internal borders have 1px width, this need to add 4 x 1px to 120px. */
@@ -57,7 +58,7 @@
       </div>
       <div class="row subheading">
 	<div class="span12">
-	  <p class="lead">This is my first bitstarteer project.</p>
+	  <p class="lead">This is my first bitstarter project.</p>
 	</div>
       </div>
       <div class="row pitch">
