--- a/index.html
+++ b/index.html
@@ -204,9 +204,7 @@
           </div>
           <div class="row-fluid">
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="6bcf18983f741d845fce18cb9333837a" data-button-style="custom_large" href="https://coinbase.com/checkouts/6bcf18983f741d845fce18cb9333837a">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
